Tutorials/GoogleCloud_CFFA_samples_config/cffa.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: cffa-flask-app
  labels:
    name: cffa-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cffa-flask-app
  template:
    metadata:
      name: cffa-flask-app
      labels:
        name: cffa-flask-app
    spec:
      volumes:
        - name: pd-ssd-website-cffa
          persistentVolumeClaim:
            claimName: pd-ssd-website-storage
            readOnly: true
      containers:
        - name: cffa-flask-app
          image: gcr.io/cffa-scalable/cffa-app:v0.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: pd-ssd-website-cffa
              mountPath: /home/cffa/shared
              readOnly: true
