Tutorials/GoogleCloud_CFFA_samples_config/service_https_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-cffa
  annotations:
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS"}'
spec:
  type: NodePort
  selector:
    name: cffa-flask-app
  ports:
  - name: my-https-port
    port: 443
    targetPort: 5000
